--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,7 @@
 html {
   font-display: swap;
 
+
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   background-color: white;
   font-family: din-2014, sans-serif;
   font-weight: 400;
+  overflow-x: hidden
 }
 
 h1, h2, h3, h4, h5, h6 {
